styles/main.css
/*@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
#intro {
  /*background: url("../img/panorama-3094696_1920.jpg") no-repeat center center;*/
  /* background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),url("../img/intro/ywcc.jpg") no-repeat ; */ /* center center */
  /*background: url("") no-repeat center center; */
  /*background: grey no-repeat center center; */
  background-size: cover;
}
body {
  font-family: 'Open Sans','Helvetica Neue',  sans-serif;
  /* font-size: 12px; 
background-color: whitesmoke;*/
}

.top-nav-collapse {
  /* background-color: #ffffff !important; */ /*#3949ab */
}

.navbar:not(.top-nav-collapse) {
  /* background: transparent !important; */
}

/* @media (max-width: 768px) {
   .navbar:not(.top-nav-collapse) {
    background: transparent !important; // #3949ab 
  } 
} */
@media (min-width: 1600px) {
  #intro{
    height: 100vh;
  }
}

.image_headers{
  font-weight: 650;
  font-size: 0.85em;
}
.update_item{
  color: rgb(94,94,94);
  font-weight: normal;
}
.update_item_header{
  font-weight: bold;
}

.image_block{
  border: solid 1px gainsboro;
  border-radius: 3%;
  box-shadow:  1px 1px 1px 1px grey; 
}
.lab_updates{
  /* width: 12.499999995%;
  flex: 0 0 12.499%;
  max-width: 12.499%;
  z-index:5; */
  font-size: 0.85em;

  /* margin-right:0.1px; */
}
ul {
  list-style: none;
}
li {
  margin: 0.25rem;
}
li::before {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  display: inline-block;
  line-height: 2rem;
  color: white;
  text-align: left;
  margin-right: 0.5rem;
}

#intro .h6 {
  /* font-weight: 300;
  line-height: 1.7; */
}

/*.hm-gradient .full-bg-img {
  background: rgba(42, 27, 161, 0.7);
  background: linear-gradient(45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
}*/

@media (max-width: 450px) {
  .margins {
    margin-right: 1rem;
    margin-left: 1rem;
  }
}

#pricing .lead {
  opacity: 0.7;
}

#pricing .card-image {
  background: url("../img/architecture.jpg") no-repeat center center;
}

#pricing ul li {
  font-size: 1.1em;
}
.card-highlights {
  width: 100%;
  height: 10em;
  object-fit: fill;
}

.research_area_img{
  width: 100%;
  height: 100%/*15vw*/;
  object-fit: fill;
}
.description{
  /*letter-spacing: 0.05em; */
}

